--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "@> 246 atoms and 1 coordinate set(s) were parsed in 0.00s.\n"
+      "@> 246 atoms and 1 coordinate set(s) were parsed in 0.01s.\n"
      ]
     }
    ],
@@ -180,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fac3b2eb2014e8d9fc919840e22a6d5",
+       "model_id": "21c7c46327304239a557cb57e70126ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -353,22 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d8f82985878472ea8d182c7cc0e18e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glycosylator as gl\n",
     "import nglview as nv\n",
@@ -377,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,23 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "@> 5309 atoms and 1 coordinate set(s) were parsed in 0.05s.\n"
+      "@> 5309 atoms and 1 coordinate set(s) were parsed in 0.06s.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'MAN8_3;3,2'"
+       "'UnknownGlycan'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -484,9 +471,15 @@
     "# in glycan_topology the first residue is missing, so at some point a patch path cannot be found, even if the underlying atom_group seems to have all the residues.\n",
     "new_glycan = g.glycosylate(original_glycan, 'MAN9_3;4,2', protein_residue, 'NGLB')\n",
     "# export glycoprotein as pdb if desired\n",
-    "# g.write_glycoprotein_to_PDB('HIV_N262_man9.pdb')\n",
-    "\n"
+    "# g.write_glycoprotein_to_PDB('HIV_N262_man9.pdb')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -505,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 25 2022, 19:07:11) [Clang 14.0.0 (clang-1400.0.29.102)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
