--- a/docs/source/examples/glycosylate_membrane.ipynb
+++ b/docs/source/examples/glycosylate_membrane.ipynb
@@ -416,7 +416,7 @@
    ],
    "source": [
     "view = membrane.py3dmol(glycan_color=\"red\")\n",
-    "for glycan in membrane_to_optimize.glycans.values():\n",
+    "for glycan in membrane_to_optimize.get_glycans().values():\n",
     "    view.add(glycan.py3dmol(color=\"cyan\"))\n",
     "view.show()"
    ]
