add link to buildamol tutorials

--- a/docs/source/examples/glycosylate_membrane.ipynb
+++ b/docs/source/examples/glycosylate_membrane.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "If see some glycans that are clashing with each other or with the membrane itself we should do something about it! Glycans may clash because the overall geometry of the environment is not considered when attaching glycans, so we may need to perform an optimization in order to fix the conformation.\n",
     "\n",
-    "Since Glycosylator is built on BuildAMol we can use the BuildAMol optimization suite to get better conformations for the glycans on our membrane. If you are interested in learning more about conformational optimization using BuildAMol be sure to check out the tutorials in the BuildAMol documentation!\n",
+    "Since Glycosylator is built on BuildAMol we can use the BuildAMol optimization suite to get better conformations for the glycans on our membrane. If you are interested in learning more about conformational optimization using BuildAMol be sure to check out the [tutorials](https://biobuild.readthedocs.io/en/latest/tutorials.html) in the BuildAMol documentation!\n",
     "\n",
     "In short, to optimize structures we need to perform four steps: \n",
     "\n",
