some more Biobuild->BuildAMol ref updates

--- a/docs/source/examples/sequons.ipynb
+++ b/docs/source/examples/sequons.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see it is imply a dictionary mapping the three letter code of the amino acid to another string. This other string is the label of a *defined linkage*. When defining our own sequons we need to be sure to also define appropriate linkages and add them to Glycosylator's default Topology (if we cannot use existing ones). By the way, if the part about defining linkages and adding them to a topology was cryptonite to you, go check out the [Biobuild tutorial](https://biobuild.readthedocs.io/en/latest/examples/default_settings.html) on default resources."
+    "As you can see it is imply a dictionary mapping the three letter code of the amino acid to another string. This other string is the label of a *defined linkage*. When defining our own sequons we need to be sure to also define appropriate linkages and add them to Glycosylator's default Topology (if we cannot use existing ones). By the way, if the part about defining linkages and adding them to a topology was cryptonite to you, go check out the [BuildAMol tutorial](https://biobuild.readthedocs.io/en/latest/examples/default_settings.html) on default resources."
    ]
   },
   {
