update iupac tutorial with more details on format

--- a/docs/source/examples/building_glycan_from_iupac.ipynb
+++ b/docs/source/examples/building_glycan_from_iupac.ipynb
@@ -321,10 +321,13 @@
     "## Specifying Isomers\n",
     "Monosaccharides can be found in different configurations. If a specific sugar such as Galactose has multiple possible stereoisomers available such as _$\\alpha$-D-Galactose_ vs _$\\alpha$-L-Galactose_ Glycosylator will by default go and select the first matching component that fits the provided input, thus potentially adding an isomer other than the one desired. This can be prevented by specifying isomer information within the IUPAC string like so:\n",
     "\n",
-    "1. add `d-` or `l-` in front of the monosaccharide code \n",
-    "2. add `p` (pyranose) or `f` (furanose) after the monosaccharide code\n",
+    "1. add `a-` or `b-` if it's the first residue, otherwise ignore since the linkage information is normally used for this. However, if the code does not find the component, try adding it anyway.\n",
+    "2. add `l-` or `d-` to specify the isomer\n",
+    "3. add the monosaccharide code, e.g. `Glc`, `Gal`, etc.\n",
+    "4. add `p` or `f` for the pyranose or furanose forms (in some cases only one may be available anyway but still specify)\n",
+    "5. add the code for modifiers, e.g. `NAc`\n",
     "\n",
-    "The pattern looks like this: `{d|l}-{code}{p|f}`, e.g. `d-Galp` for a D-configuration Galactopyranose. The information whether $\\alpha$ or $\\beta$ is required comes from the linkage that connects the given monosaccharide unit to the previous one in the glycan. Therefore `d-Galp(b1-4)GlcNAc` will connect a $\\beta$-D-Galactopyranose to the N-Acetylglucose."
+    "The pattern looks like this: `<{a|b}-?>{d|l}-{code}{p|f}{mods}`, e.g. `d-Galp` for a D-configuration Galactopyranose or `a-l-GlcpNAc` for the L-configuration of alpha N-Acetylglucose. The information whether $\\alpha$ or $\\beta$ is required usually comes from the linkage that connects the given monosaccharide unit to the previous one in the glycan, however as in the case of the N-Acetylglucose in certain cases it may be necessary to provide it manually in case Glycosylator cannot find the component on it's own. But in general `d-Galp(b1-4)GlcNAc` will connect a $\\beta$-D-Galactopyranose to the N-Acetylglucose without problems. There is also a [Github discussion](https://github.com/ibmm-unibe-ch/glycosylator/issues/2) that goes into some more details here."
    ]
   },
   {
